--- a/op-e-mail-writing-new/lesson-12/main.scss
+++ b/op-e-mail-writing-new/lesson-12/main.scss
@@ -3,3 +3,13 @@
 .biz-tip-content {
   margin-top: clamp(95px, 18%, 160px) !important;
 }
+
+.see-content{
+  ul{
+    // list-style-position: inside;
+    line-height: 1.8 !important;
+    li{
+      // padding-left: 0;
+    }
+  }
+}
